public interface Creature {
	void Interaction(Player _Player);
}
