@startuml wasteland_trail
Object <|-- Player
Object <|-- Creature 
Object <|-- Consumable

Creature <|-- Enemy 
Creature <|-- Trader 

Enemy <|-- Raider
Enemy <|-- Mutant

Consumable <|-- Food 
Consumable <|-- Drink 
Consumable <|-- Medicine

interface Object
interface Creature{
	+ Interaction()
}

class Consumable{
	- String name;
	- int effect;
	- int radiationEffect;
	- int price;
	- String type;

	+ DisplayConsumableDescription()
}

class Enemy{
	- String name;
	- int baseDamage;
	- int damage;
	- int health;
	- int money;

	+ Interaction()
}
class Mutant{
	{method}//reimplementing Interaction
	+ Interaction()
}
class Raider{
	+ Interaction()
}
class Trader{
	+ Interaction()
}

class Player{
	- int maxHealth = 100;
	- int health;
	..
	- int attack;
	..
	- int thirst;
	- int maxThirst = 100;
	- int hunger;
	- int maxHunger = 100;
	- int radiation = 0;
	- int maxRadiation = 100;
	..
	- int money = 0;
	- Consumable[] playerInventory = new Consumable[100];
	- int inventoryIndex = 0;
	--
	+ DisplayInventory()
	+ StoreConsumable()
	+ ConsumeConsumable()
	+ TakeBreak()
	+ DisplayStats()
	+ Die()

}
@enduml